# trading-backtester

./: .gitignore  LICENSE  README.md  backtester.py  demo_backtest.ipynb  main.py  metrics.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
data/: sample.csv
examples/: run_backtest.py
scripts/: generate_sample.py
tests/: test_backtester.py  test_metrics.py  test_webapp.py
trading_backtester/: __init__.py  backtester.py  metrics.py
trading_backtester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
trading_backtester/strategies/: __init__.py  mean_reversion.py  moving_average.py  rsi.py
webapp/: app.py
