[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-backtester"
version = "0.1.0"
description = "Simple Python backtesting engine with strategy evaluation and performance metrics."
authors = [
    {name = "Ryder"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
]

[project.scripts]
backtester = "trading_backtester.main:main"
